Updated Figure 3, minor edits introduction

--- a/Draft3.tex
+++ b/Draft3.tex
@@ -54,17 +54,17 @@ Some of these variants are being imputed onto genotype data and reach genome wid
 
 
 
-The last 5 years have seen an increase in the number of individuals genotyped through private companies or medical research cohorts. 
-Larger sample sizes allow researchers to identify finer resolution statistically significant differences between groups of individuals. 
-Mutations associated to a disease can be identified by comparing the genomes of healthy individuals to those afflicted by a disease. 
-The mutations commonly found in patients and rarely in controls might be associated to the disease in question.
-However, demonstrating that these mutations are biologically relevant can be difficult.
-Especially with the increasing size of cohorts, spurious associations are increasingly becoming an issue. 
-For this reason, careful consideration must be taken when including individuals from different ancestral origins in these association studies.
-Benign mutations at high frequencies in one populations might be exceedingly rare in another population.
-Therefore, population wide differences in mutations must be included as covariates to avoid spurious associations.
+%The last 5 years have seen an increase in the number of individuals genotyped through private companies or medical research cohorts. 
+%Larger sample sizes allow researchers to identify finer resolution statistically significant differences between groups of individuals. 
+%Mutations associated to a disease can be identified by comparing the genomes of healthy individuals to those afflicted by a disease. 
+%The mutations commonly found in patients and rarely in controls might be associated to the disease in question.
+%However, demonstrating that these mutations are biologically relevant can be difficult.
+%Especially with the increasing size of cohorts, spurious associations are increasingly becoming an issue. 
+%For this reason, careful consideration must be taken when including individuals from different ancestral origins in these association studies.
+%Benign mutations at high frequencies in one populations might be exceedingly rare in another population.
+%Therefore, population wide differences in mutations must be included as covariates to avoid spurious associations.
 
-\sgcomment{This intro paragraph is much too vague -- it reads like general thoughts about genetics at large. We need to be much more concise. I would start with something like:}
+%\sgcomment{This intro paragraph is much too vague -- it reads like general thoughts about genetics at large. We need to be much more concise. I would start with something like:}
 
 The last 5 years have seen a drastic increase in the amount and quality of human genomes sequence data. Hapmap \cite{}, the 1000 Genomes Project \cite{}, and the Simons Diversity project \cite{}, for example, have made thousands of genomes publicly available for population and medical genetic analyses. Many more genomes are available indirectly through servers providing imputation services \cite{haplotype reference consortium} or variant frequency estimation \cite{GnomAD}. 
 
