added author, changed manuscript title

--- a/legacy.tex
+++ b/legacy.tex
@@ -25,11 +25,12 @@
 
 \author[1,2]{Luke Anderson-Trocm\'e}
 \author[1,2]{Mathieu Bourgey}
+\author[3]{Fumihiko Matsuda}
 \author[1,2]{Simon Gravel}
 
 \affil[1]{Department of Human Genetics, McGill University, Montreal, QC H3A 0G1, Canada}
 \affil[2]{McGill University and Genome Quebec Innovation Centre, Montreal, QC H3A 0G1, Canada}
-
+\affil[3]{Center for Genomic Medicine, Graduate School of Medicine, Kyoto University, Kyoto 606-8501, Japan}
 \corr{simon.gravel@mcgill.ca}{SG}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
